<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemDescriptionActivity">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_marginBottom="45dp"
    android:paddingBottom="8dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ss.com.bannerslider.Slider
            android:id="@+id/view_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:text="Dell Inspiron 6075"
            android:padding="4dp"/>
        <android.support.v7.widget.AppCompatRatingBar
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="-8dp"
            android:visibility="gone"
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:rating="4.1"
            android:layout_marginStart="-80dp"
            android:numStars="5"
            android:layout_marginLeft="-80dp" />
        <android.support.design.card.MaterialCardView
            android:id="@+id/specification_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/collapsible_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:text="@string/specifications"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/collapse_image_button"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_keyboard_arrow_up_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="4dp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/collapsible_card_title">
                <TextView
                    android:id="@+id/specification_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/bottom_sheet_behavior" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:id="@+id/features_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@+id/specification_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/collapsible_card_title_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/features"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/features_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/collapsible_card_title_features"
                    android:layout_margin="4dp"
                    android:text="@string/action_placeholder" />
            </RelativeLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/features_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/related_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/similar_products"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <GridView
                    android:id="@+id/related_products_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/related_card_title"
                    android:horizontalSpacing="2dp"
                    android:numColumns="2"
                    android:verticalSpacing="2dp" />
            </RelativeLayout>
        </android.support.design.card.MaterialCardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/addToCartBtn"
            android:layout_margin="-4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:padding="-4dp">
        </Button>
        <Button
            android:id="@+id/dashBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="-4dp"
            android:layout_weight="2"
            android:background="#1976d2"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:text="@string/title_dashboard"
            android:padding="-4dp"/>

    </LinearLayout>
</RelativeLayout>